--- a/index.html
+++ b/index.html
@@ -5,42 +5,54 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Find the top real estate agents in your area and compare services easily." />
+    <meta property="og:title" content="Find Top Real Estate Agents" />
+    <meta property="og:description" content="Find the top real estate agents in your area and compare services easily." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-website-url.com" />
+    <meta property="og:image" content="https://your-website-url.com/og-image.jpg" />
     <title>Find Top Real Estate Agents</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script type="module" src="/src/main.jsx"></script>
-    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
+    <noscript>
+      <p>This website requires JavaScript to function properly. Please enable JavaScript in your browser settings.</p>
+    </noscript>
+    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js" defer></script>
+    <script>
+      AOS.init();
+    </script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@0.2.28/bundled/lenis.js" defer></script>
+    <script>
+      const lenis = new Lenis({ 
+        duration: 1.3, 
+        easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
+        direction: 'vertical',
+        gestureDirection: 'vertical',
+        smooth: true, 
+        mouseMultiplier: 1, 
+        smoothTouch: false, 
+        touchMultiplier: 2, 
+        infinite: false 
+      });
+
+      lenis.on('scroll', ({ scroll, limit, velocity, direction, progress }) => {
+        console.log({ scroll, limit, velocity, direction, progress });
+      });
+
+      function raf(time) { 
+        lenis.raf(time); 
+        requestAnimationFrame(raf); 
+      }
+      requestAnimationFrame(raf);
+    </script>
+    <script>
+      const apiKey = "YOUR_SECURED_API_KEY"; // Replace with your real API key
+      const script = document.createElement('script');
+      script.src = `https://maps.googleapis.com/maps/api/js?key=${apiKey}&libraries=places`;
+      script.defer = true;
+      document.head.appendChild(script);
+    </script>
   </body>
-  <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@0.2.28/bundled/lenis.js"></script> 
-<script> 
-const lenis = new Lenis({ 
-duration: 1.3, 
-easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
-direction: 'vertical',
-gestureDirection: 'vertical',
-smooth: true, 
-mouseMultiplier: 1, 
-smoothTouch: false, 
-touchMultiplier: 2, 
-infinite: false, 
-}) 
-
-lenis.on('scroll', ({ scroll, limit, velocity, direction, progress }) => { console.log({ scroll, limit, velocity, direction, progress }) 
-}) 
-
-function raf(time) { 
-lenis.raf(time) 
-requestAnimationFrame(raf) 
-} 
-
-requestAnimationFrame(raf) 
-</script>
-
-
-
 </html>
